Package: R.oo
=============

Version: 1.9.9 [2012-09-11]
o Now abort() immitates how stop() works but without the signalling
  of a condition.
o ROBUSTNESS/CRAN POLICY: Updated abort() for condition to utilize
  invokeRestart("abort").  This avoids having to call 
  .Internal(.signalCondition(...)).  It also means that the message
  outputted by abort() no longer starts with a "Error in ...:" line.
o BUG FIX: getContribUrl() and getDevelUrl() would give an error if
  corresponding fields did not exists in the DESCRIPTION file.  Now
  they return NAs just as getUrl().


Version: 1.9.8 [2012-06-22]
o GENERALIZATION: Added newInstance() for BasicObject.
o ROBUSTNESS: Now constructor BasicObject() is guaranteed to
  return an object with non-duplicated class attribute elements.


Version: 1.9.7 [2012-06-20]
o CLEANUP: Dropped non-used adjusted getClass() generic function,
  which means that now there is one less function masking the
  'methods' package.
o BUG FIX/GENERALIZATION: throw() for Exception would give an error on
  R < 2.14.0, where no generic getCall() exists.  Now it works for
  all versions of R.


Version: 1.9.6 [2012-06-11]
o BUG FIX/GENERALIZATION: Rdoc$getKeywords() now uses system
  environment variable R_DOC_DIR for locating the internal
  KEYWORDS.db.  Thanks Charles Hogg at NIST for suggesting this.


Version: 1.9.5 [2012-04-20]
o Added argument 'export' to setConstructorS3().
o Now Rdoc$getUsage() searches also the package namespace for 
  the function/method definition.  This is done, before looking
  in the global search path.
o CLEANUP: setConstructorS3() no longer sets attribute "formals".  It
  has been deprecated since April 2003.


Version: 1.9.4 [2012-04-05]
o Now package imports and exports getCall() from the 'stats' package
  so that generic function getCall() is available for Exception:s 
  also when 'stats' is not loaded, e.g. during executing .Rprofile.


Version: 1.9.3 [2012-03-18]